WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
164073
Web Inspector: Worker should recover if Inspector is closed and never sent Worker.initialized command
https://bugs.webkit.org/show_bug.cgi?id=164073
Summary
Web Inspector: Worker should recover if Inspector is closed and never sent Wo...
Joseph Pecoraro
Reported
2016-10-27 13:30:59 PDT
Summary: Worker should recover if Inspector is closed and never sent Worker.initialized command In the unlikely event that the Inspector crashes and disconnects from a Worker during initialization it could leave the Worker paused waiting for debugger messages. When we disconnect from a worker we should terminate the debugger message only run loop mode.
Attachments
[PATCH] Proposed Fix
(5.63 KB, patch)
2016-10-27 13:33 PDT
,
Joseph Pecoraro
bburg
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Joseph Pecoraro
Comment 1
2016-10-27 13:33:56 PDT
Created
attachment 293050
[details]
[PATCH] Proposed Fix
Blaze Burg
Comment 2
2016-10-27 13:36:49 PDT
Comment on
attachment 293050
[details]
[PATCH] Proposed Fix Very nice, r=me
Joseph Pecoraro
Comment 3
2016-10-27 15:23:53 PDT
<
https://trac.webkit.org/changeset/208011
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug