Web Inspector: Worker should recover if Inspector is closed and never sent Worker.initialized command https://bugs.webkit.org/show_bug.cgi?id=164073

Reviewed by Brian Burg.

Source/WebCore:

Test: inspector/worker/worker-recover-if-inspector-close.html

* workers/WorkerInspectorProxy.cpp:
(WebCore::WorkerInspectorProxy::disconnectFromWorkerInspectorController):
Ensure we stop the debugger only task loop if needed when the last debugger
message comes in.

LayoutTests:

* inspector/worker/worker-recover-if-inspector-close-expected.txt: Added.
* inspector/worker/worker-recover-if-inspector-close.html: Added.
Test to ensure a Worker recovers when it is paused on opening waiting for
Inspector messages and the Inspector disconnects.

Canonical link: https://commits.webkit.org/181799@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@208011 268f45cc-cd09-0410-ab3c-d52691b4dbfc